template-camunda-demo-identity-provider.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: camunda-demo-identity-provider
  namespace: camunda
  labels:
    app: camunda-demo-identity-provider
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: camunda-demo-identity-provider
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-demo-identity-provider
  namespace: camunda
  labels:
    app: camunda-demo-identity-provider
spec:
  replicas: 2
  selector:
    matchLabels:
      app: camunda-demo-identity-provider
  template:
    metadata:
      labels:
        app: camunda-demo-identity-provider
    spec:
      containers:
        - name: camunda-demo-identity-provider
          image: ${IDP_IMAGE}
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "384Mi"
            limits:
              memory: "768Mi"
          readinessProbe:
            httpGet:
              path: /auth/login
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12
