template-keycloak.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: camunda-keycloak
  namespace: camunda
  labels:
    app: camunda-keycloak
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: camunda-keycloak
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: camunda-keycloak
  namespace: camunda
  labels:
    app: camunda-keycloak
spec:
  serviceName: camunda-keycloak
  replicas: 1
  selector:
    matchLabels:
      app: camunda-keycloak
  template:
    metadata:
      labels:
        app: camunda-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:${KEYCLOAK_VERSION}
          args: ["start"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              memory: "1536Mi"
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 18
