template-keycloak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-keycloak-ingress
  namespace: camunda
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - ${CAMUNDA_DOMAIN}
      secretName: tls-secret-${CAMUNDA_DOMAIN}
  rules:
    - host: ${CAMUNDA_DOMAIN}
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: camunda-keycloak
                port:
                  number: 80
